--- a/Alquiler_motos/Alquiler_motos/cliente.resx
+++ b/Alquiler_motos/Alquiler_motos/cliente.resx
@@ -121,7 +121,7 @@
   <data name="btn_buscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAACDFJREFUWEe1V3lQFHcaHbKbPd2NVYmru0bRWFqh1BB1cYlBhgSRgQEREZSSU5RL
+        vwAADr8BOAVTJAAACDFJREFUWEe1V3lQFHcaHbKbPd2NVYmru0bRWFqh1BB1cYlBhgSRgQEREZSSU5RL
         zoEB5ZDhvma4FRgWEETDIQRERQEjSFzjyaWyoohgsojxDnL18fbXLZ3yn9XRNa9q6jdV8/X7Xr/vmG7R
         S6AVFRX1Dvdlxpw5a12srI4ofX3vF3t7s/mOjuNhNjbXxHp60aJp02ZwMba2tr/izrcFralzmo2padmx
         hAQ8qahg0dgI7N8PpKRgQqVie4OCEGdiMjR3yRIpF/y2RAjJf+uybl3LQFkZmIYGij16lK5VKNiQQBmi
@@ -162,7 +162,7 @@
   <data name="btn_actualizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAACJZJREFUWEe1VglsVNcVdVIMqkpKW+IqSlAhLaEwGGb+jO2xx+P5fxYvMVtIoAVU
+        vwAADr8BOAVTJAAACJZJREFUWEe1VglsVNcVdVIMqkpKW+IqSlAhLaEwGGb+jO2xx+P5fxYvMVtIoAVU
         gkvKUigOhIQWGjAgVBR2bGJ7bIMpUTbUxE1KkqppawQiKgUHgo3BM17GxgakgInZvMz/7/TeNzMu0GYh
         tE+6eu/d/+8999137/k/7m4GEHcfMP0bQMEAkvuj6v7Busgzfifuvqj63kcEmB3f7hR1BQPR8ux3pByf
         Hx9VyxG1+Y8g73pETywdicCSQaJ1aZZoy98pWhcdMUIL2oyW+ZelhBa2itDiw6JtyTYRWuqJBXRPQTC4
@@ -205,7 +205,7 @@
   <data name="btn_eliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAABvhJREFUWEfFV+lPlGcQ39pP+g+Y+LkWBFe5oV54gQe42FQjwgKyHKKIyrFANanG
+        vwAADr8BOAVTJAAABvhJREFUWEfFV+lPlGcQ39pP+g+Y+LkWBFe5oV54gQe42FQjwgKyHKKIyrFANanG
         pLFpILH1aIq2mngA2tbb1Ds1mmJrLKLCAl7gxaG477mwxzudmT1EcWHtBzvJs8+8xz7zm9/MM8+8On8C
         Ot1HsHTpxzTTtbR29li5aJYJR51cGG+RC2eI0qrpLrFgmksqmCpK+XEWMT+2XsyNyZFyYse+a42ABTZt
         GkV/JF0sSQxW1s/dI6+b0yevnQ1S0SxNXjMTEATIq6eDtGoaSAVTQFr5GYj5cZqUFwtSbswrISdqj5gV
@@ -241,7 +241,7 @@
   <data name="btn_insertar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAABjdJREFUWEfFV1tPVFcUHu1T/QNNfDf6InbUNMTK3jA8aJs0Jm1M+lr6XKttHS4z
+        vwAADr8BOAVTJAAABjdJREFUWEfFV1tPVFcUHu1T/QNNfDf6InbUNMTK3jA8aJs0Jm1M+lr6XKttHS4z
         MOJwmQGmrWmU1ntSRaAiiKYMwwzMFbzFtNoY29LWKrY6FAWEIszMWf3WPnOQy3AJSdtlvuw1x836vrX2
         2vvsY1rIiEyrmpt3v8Qj/670W16pCIqCiqBsdAbF3YM9chRIlQOOgBx1dIu7ZX7ZVObPeb8Yc/UgplW7
         EYNH9Xu55iDTaiZnv7JHbqgKy+MgflIZkuQMSg3gkSCAIIAOdOtw+KVWFpBU6hdP7V3yeLFXbuAYLMLh
@@ -277,11 +277,188 @@
   <metadata name="Alquiler_motosDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="Alquiler_motosDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="ClienteTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>361, 17</value>
   </metadata>
+  <data name="btn_listar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAABaVJREFUWEfFV0tPG2cU/Wymi3bVTRUp+4hssmr+RatKqdo/QBaVIrZdBqqKRReh
+        FSWYh3mER8AGQyitKiVt06pVkZJWvN+Yl8E2fmAwbzy2b8+9Mx+Yh8FEanulwwz2+DvnnnvnmzsqbxA5
+        VDcVyZGjc/2Gag+XqPaQR7WFZlT72rZqW82oVuBJYFs9WZlRzQGvalq+r9wLN+Q3Z9coOMrJKT/keBq7
+        DfJG1RlOqKdhUu3BrOoI8ZFU2xqpVuDJKqmWAKnmlSxAqnFlU7mXGlX90m1Zg9fiNQsKTewNvK08kUqQ
+        pwGyEMqAOA3irJBrAYyWAJOn4UAGIEHjkqnci5WqEmtx6LXzhr7AF72lPNExCCDVJQJMybzVzpTBWTMx
+        i2A32BVGG87ZCSZvWEzDCcJxTNX6b8naeUXoL3pid1V3LKa8UVLeSAq2Z1FjZGNnxRbnE8AlYqe6gHb8
+        37iUBXkKIFW3EFN1/rvCcU6Ero8P9e6JRS3yqCmLcgZuLCACQH6lAIAFeLAGO8jX1i+wG6RqF6LKtVgs
+        XMc9oTt0IPiO6o4PIXsC2HL+IdvHmZDRvExGywoZcMNAKYw2oH2N3uoIUhFwTkAXyDkRXo/F1vlNWa/O
+        P6TqwcUh3MfWxx8BBBfYdr4QAkAuDgAunDNqcV4HN+rhRAOycwMta+SEAOcpByCAXegGeF12zuVPybou
+        f6VwHpfi2cYdIfbhQk8kaym1swcccKB0cIMqRraofAgYTlL5SJLKcPxqYoc+eslZrsGJMDkle1uAVUoI
+        EFfZ0SyaUQu5Y5Fz+OINQt4TNy2l82K/wxbghIDZrRRxZLJykDDtf+pf+enLV0EqHsAarSEq8uSUQJeh
+        d8MqUe28aYmYa7DI+2M3VW88Khd0rWeFXOw/EcAOTG5aAo5AamaYnOiA/yC+/mOWnvujtHpI9F4PiDvW
+        yalLoAVwGZijYdHicM1HVfX0Ta59iXzRt4EtFc1SM3ehgMscqPp9hjpGQ3I+uL5H73rRkJ0RcuQ6wAL6
+        EtYdUzObsUTMlcD+RJcI8MXSUvs8DpwVkMVRC+ifDNK97+fowQ+j9PmPI/Rh3yTcjJ4XwDx87ppP2wI6
+        WcCUKOPm4w9rLxeQBmcW7Izc4GKY9mfT0SQ53VMg3bBEaAE+CGAR3IzstGtuSqneRFIE8I7HH3KDXCJA
+        Zx1M7tHWwZGcaykZW8BMKE6Ox0MgTEAAeuFYgF0G3iFFwGwSAuIZSwDq9ji/AP+2SSnTpMTeIS3Gd+he
+        0y8USu6LEwcpkw6B/SNTBMyGkXnNsC0g1wHgGbiasXdYDmQKEsAb0eJuhpK7e/RJ/zR90DpIc5FNCm/v
+        033fa3owMEKffTdMpeiBQzi0EAHxsYAzDpwXUFgJpu0S/B0/opH4gZynkX0KhCk4z2ByjtMOXFWCazeh
+        RbKO7JMH1mc6dA/kF3BRExZ4G86jB0z0wNb+Ea0kdunj5pfSiBxHZppS6bQcOfIKuPA2LGAj0j2wtbNH
+        n0oP/ElTILl2D7DT5zaiArZifhaMJ6xbbjBySK8j+3K+j4x3UhnaMbNAhrZxzjEVxG2Yz4FzWzHHGz6M
+        zkZuDziPBdi3IZNf+DDiuOpxjEmo9NcAVbwYo4fPx6nsxTh98dMElTN+ZkwKyoCK32aotP8vcrhGRQDG
+        OiQGASwi93FcrR/HVw4kAI9jvEd8M0GqClts1TSpb4HqGXw+q+/pkzuoAeJ5MNHPAl43dyCp9T8STuEu
+        eCTDOIYZUIDJ18DQaWAKMiDWwCBq4Plv4BFsgNDgNfRAwueXjmQcekD0xoovH0rPTsXAqaGUgcx5MpZ5
+        ALhyKNWhS9Edex/4j8dyHfqL/+XFRIe+4OTVzJSsBP/2q5kOro++mF9Ou8Lua72cNi0nkPkbvpzq4A7l
+        H+pOLeT1vCXgUc1LJYW/niv1D3g4Vcyb1R52AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="Label12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAACBZSURBVHhe7V0HeBVV9pdUSggJBBCkSRMCivpXEbtSbBQB
+        pRflDwui666roKzuCvYCWwCRKkWQHnqvCb0jKh2kSw0qsqsQcvb8zsx5b95kXvKSvBRgzvf9vkzu3Hvu
+        ueece26ZmftuuAYpjBFiXApFMu5hvMqYwNjCOM64yLhiAtdIwz3kQd67GREMJfAEb5fyKYUy1PAFGDD6
+        Pxm7GSkMsoIz+MB+n4EyKPtvRl0GeIJQB+pyKZ8QDKMGgXGaM9YxPMYsUOAGCi1QICU0pEBKSAHp8anW
+        +yZScc/Mk+LgFOsZLRjqZKhTncKlPCJrb7yfASOJMRlX2OiXTYP7GBMOUTAshIpEGMA10uz5UJZxma+t
+        TrOB8QADZI06LuUyqeELMwYx1HAp6O1Wg8YUCqX7by5K3e4tRR8+VZ5GtKpMkzpWoxkvVKcEBq6Rhntd
+        65aku8sVoiLhBTzlEQ0QFcBb0xgDGagbpLK4lEukk7EajB0MGERCN0MMxKGc7q0YRf0eL0ezutxCa/9Y
+        izb8qTate6UWrXq5FiW+FE8rehrANdLW8j3kWfVSTfqqdQV6+Z5ourV0uPACTzgVw+oIqBsygNwJYi6R
+        Kro+4zwDhkCo94zrD1WOpuHPVRajw+ArXoynxd1r0qI/1OC/QE1aAvQwwddIwz0jT012ilq0skd1mtqm
+        DPV9JIbuvilSeANmXRga8D9kgCwg1wlymFTBTRm/M2AATO7EMOViIuizJhXE6Ku5R4vR2agw8tJMwnAQ
+        OE4NSmhfjr5uWZJ6PRBDN0aFqhNI3aYMkAUygVwnyCHScbYh4xIjlcdmTPTEIA2rF5PeC+NrL3YybNYQ
+        T5PalqcJ7AQjm5Wk+8oXtDqBThAhE2QDuXOCIJPOtOMZ5xiYmGGGLoboWrcUreexe/mLRph3NmL2sJzn
+        CnCCL5vF0eRWpenZ+CJ2J8BfyAYZQe7qIEika23MuLcxoGjPZO+VB2+kTX+uLaEaYdvJeMHCcp5LTGx9
+        Ew1vUoKmti5NHetEWZ1Ah4OtDF0duPsEQSANp1h2QcE84TPCflde1sH46PVZGeezinHP3kjDm8aJEzxb
+        yycS6MQQsoLcoSCbpAp8mAHFesb8J2rESNiXGb2DkXIKyzgKzP//ajTqGWM+MOm5UvRABZ85ga5GIDPI
+        dYJskIbQVQxdg1PF2EhayL0eY35Oh3074GzLe9ai6R0q0oimJWhM81L8tySVLWqsDlRGRhID5A4DWSTt
+        Oc8yoFDP7l5/c6mXUxM+K/w52BKec4xrWZqNH0cTOQr0uj/GcABTVlPmlgyQGwWyQNpzEhkcXguIUh+r
+        Gp1rxjc2hOLTOIERBeJpRqebaSQ7AIYCOEHdcsZmEQ8F6gCQHeRGgUyS9hg84IEiZVxFBMCePbZtg7vO
+        TwvwRz1ftasiToA0+1wDUWBsi9LsAHE0vmUpevexWOujZZ0L3McAuVEgE6S7aTLz594vs2s80Fnzx5w1
+        PngDm1+tTW81uEmMiX2GjTzhXIY5hyUvosDU9hUkCoziKPD1s6XojjKeKKArArxPAHJ3CAMkDZfhjD0M
+        KFM2WvBgR8I/9zyr0YIFTCxXslFRxx/qlRJD6ryj1e0l0gwFWBHMw4qAja/DwMt1o9UBdHMIL5Wo8d2h
+        IADSHbQ7GR4DFC8cRrO73CIPdoK57AMvzCeW8V/0cjwifqhyUTWiPAnE0hOhfWDzSp5nDNby41reKMPA
+        mOYl6fOn46hYZIiUtwwHdzBA7u5gAKS95UWGJ/w/wOEfT/eCFf7Rm2F4LCXxCBj/Y1cxplCYaXw2PBsf
+        RgT61C9Lqx3qx+7g5LblfIaBO9MOAz0YIHcYCIBUScMYMIIoES9zwFDZmf2L0bFl3COekrgng9/8rjXo
+        tYfLyJNE1IOIg56vvRdvDH30VHnJ6+R89tXA5Fal6DlzdzDU6wBDGSDXAQIgDZMrGTCGLKnwtg7GZuz5
+        243gDzA4jAanwTVm8/LQqHt1GtOmMnW8qySVLGL0eBgcvR4OoMa/s1wRXgVUlZ6/wI/jIQLM7VKVe793
+        OfjnesWkvMrOWMEAuUNABsS6F8KSaScDypPJ1EjP8s8wpgIGNmC8zAGok2BCp28CrXo5nia0r0Kv3B9H
+        t5aOoHDzHQIgjK/DQ0N8Qj7SX76/NK1/pbbwkP0A5okIonVoPdatYV0Omrx1Ioi2qPG1jS45kCqnCOO4
+        aYhUvLSJ9/ZgBIzZMCyukxhwCiwNER1gaEzkcI2eOa1zdRrQtCK9cE9JqlO2MEWGeY0O3hHMF4bXNCAE
+        TmA+bwAql4ikP/HcYEL7qvL6GCII6kEdiAyof3mPGvQVG340TwLHtShFAx4vQRGhwgPvLOAvvjlAm0Cu
+        A6RDqpxijHPqABiHE56vziuAmjJLh2HhEGPbVpGNoUEtKskQ8SqP5R3+L44erRpNVeMKyvjN5X0Ag8Pw
+        MLLJn4oXLUTvtH+EPn6hofyPYSCM82FI0HIwaLWSBenJGjHU877S9N4T5Wkw1zu6TRWJLAOfimOUoLHs
+        BIP4byHjpVJ1gLMMtAnkOkA6pMqJZSR7HSCU5vJkbV63GlQqKpx7cggrOERCtxrRHxDWI8NCTaN702Hc
+        u6qVpSEvPU3JU98kSvyYaNUnNL5XC4oqqBPCAp4o4a8e8EGEgoMULxRCXzSJoyGN46iwrwMkM9AmkLbR
+        JQdS5cQwLA7AEaBzVZreqYqnV1sNAsNqz44MN4wNw+t9BXr1HVXK0NttHqKtA7tT6uL3iJI+IVr0LqXM
+        +TtdZsARfhjzKnV87Dbh5VuencnkLxNGM13/wugwvh8HQJtAnOSSP1Ll+EQAKPMLVio2WczQKkZXxftD
+        4chwql2xFHWqX4dG/Kkp7Rr2Ml1Z+K70dFr+AaXO6ytGT533DtH8vgI4QuqS98URDox6hT7sXJ/q1Swv
+        vJzqADSyQLZ0HMCNAAGQXwcYzMYfyuG1YrEwCbVYq/M9QWhICD16WyV6vsHt9Bb37hGvNKXET1+gY+P+
+        QldgWIR39PSlbHT+H0a/MtdrdAP9iOZyBODrK+wQKbheyo4AZ1nyHh1nXgve7UD9uzaizlyPdfIIWUqw
+        TBVjwkRGyOo6QNZIleMzBECZo3mZNYKXWR1ui6IaceHS+3W2HhtViJJn/41o9aeUCkMDKz4Uw0mvZmOK
+        0S09XbCAjY6/MPZcLr+Myy1io5v5kN8TIZhXKniu/YyS+X/Uibp1MlmzZDi1Z9kgI2R1cAB3CAiAVDno
+        LfL2LwMfbVKjKoWojL51Y6R7HCAmqiCdnfwGG7QvXWJHgNFSuIfDgOjxPkZHT/cYno0O48LwW0YQ7Z9O
+        tGkY0Zy3vXlMqDPg+syk3lKnVQaVCTI2qlpII5Q+EkZb3AgQAKly8F3+fgaUp5spAig23Fhj+zhA8hSe
+        yfNkzjqeeyDGBPie9vYFPBdI+gfRN2OI9k01jL93inG9dhA7gekcnrJ9Dd5cB+qyOwBksi4bTajsaIue
+        NeA6QAakL060ZqgiJQrITp1FyXodCwfAUo5n9UaPN3svDKYGx19MAFf2J9rMvXzn12z0aQZg+D2Tjb8A
+        0raO5LDPIV/LMi9MGlEH6kKdVhn0GjLaej/QhgFyXwoJkPShSX8GFHhZFV0kMoyef7A6RRfyzsrFATgs
+        0wI2EsK3hvaFPAdAeF8z0DDoLjU693b09L0Wo9uBPHAKDA2JA7jns3PBEbiO5Em9PA4AQBbIFFXQkMmU
+        VR8EoQ0g90FQgKQhMoqBlymgUAmlZWML06q/NaHkYZ2oWGFjswaQSeBcNva6QZS6bjAbbTjRjrFs8Ine
+        8O4xOhvX2tv9QfNIWXaa3RMpdftodqThlLzwY6lT64cskGn135uIjEhTmRm7GGgLyA3/AZD2lA4MTK7k
+        iRo2YFa81ZhoQjfa+elzvg4QXYSSt7DBD82gVO3h+Otj8ACM7gR1BOaVCn6HZlLy1nFSp9YPWSATZIOM
+        2HlEusrOaM8AuVEgANJxchIDY6oo8aWG8XRlXFc6NaQD7R/QOq0DbObeeWAape5mgwXSw7OAVPDlOpI3
+        fZnGASATZIOMPRvES7rKzpjIALlzgAxIQyQenX7P4FBqzKQXv/Ek/TrqBTo3tJN/Bzg43TCSg/GCAeHN
+        daAuJweAbJBxEcuKdJWd8R3DfRwcAKlyohmnzS3W1KI8udrFIfY8j7MYa/OrA0A2yAhZITNkN9twmoE2
+        gVwHSIdcB7jOSZXjDgHXMWV9EpjHDuBOAoNDzstAXlqteOtp/8vAPHYAzzLwr0+7y8BskoZIvEO3j+HZ
+        VCkb42cjKB84AGSCbJARaZaNoL0M933ATJKGynYMKBFbwbK3jq3gzvat4Dx2AMgCmSxbwZBVt4LRBpAb
+        /jNJOmn6FwOKvBTCvYqV61G8XuelA9jlgYx8jRPDkAbZQdoWlzJJdifAskoOfcb/+ckBIBNkg4z4n6Ff
+        BbvGzwZhzNTQ+RzjEEMcAX9V+TF54ACo0yqDysSAjK0YIMjujvvZJKsTYDLVljGT4RkO8kEEQNiHTJjt
+        64TPNX6QCQrVcGp8OGIoP7VY0cJ0duOoXHOAsxtGEepE3aYM1g8/IKM6rEtBJigXvQrP149o74uMCKeD
+        ywfL4+ArOegAV/Ckkes4wHWhTtRtynDYlAmyuWN+DpOG1Y0MnXVT4tf9iI7PppTdkxyNFwwIb64jcUI/
+        GB1160YPZAG5IT8XSMPreAaFhYaKEQb8tTPRqfl0GW8BORgvGBDeXEf/Pp3FAbRuUxaQG/pzgXQ79SUG
+        hYaGyIZLwwfqEB2dxWE65yKA8OY6GnBd1roZPRkgd6s3F0jH2FoMPTwyFd/9fbvwX0RHZhpjtYMBswPh
+        ybx3LPynfGOIOs26EQXcE8JzmXSslUMkuSdKKO7erpExDOwM/jAgPJn3H9o20t6v4R8nmYDc8T8XScfa
+        TgzPUzd8I7gu4WOeqM2hlCA6gfBinmsTPsKOnziA1snAU0uQO/7nImlvw9c22xk42UNWA3VqVKRfMVnj
+        9fqVXdmfDwgP5nWBnaDOLRXE+FoXA79f4H7xk0ekPQ6/1QNjpHBYFgM1b3A3pR6eQalsuOxEApQFj1Re
+        +z9T/y7hbdahvV9/J8jt/XlEqvgRDBjkkjpBMzbYrzD+iTkyfmdmdYAJn4z5HPYRTcALPE3e+qRvOAPk
+        Gj8PScMufqJFfzX0sjlLp1rVytGGqR/I5C3VXB3AsNjQwTW2dgFcIw3rfDgK8tLp+bRp+kdUu1p54WXy
+        VOPjp2kLMUBu6M9j0qVXWYYeLXcJE0Jcw3CdWzxCO+f/Q5ZxqewM6NnEQwTGdgGHeOzwyT1e5+/m5WTX
+        VvUp3Hy1y+SlxsfLqmUYIHfZl09IDXEjA7/tC0NdCWHD4dg3/A9jPnxPPH32RkdaOb4vHVg2WB7q4CES
+        niMkTehHA/p0ovr1bqWIcPO4WHzpaxhfJ33Y8kUdINf4+YzUIAUZGJ9hMDmhA1HAfGjjAYyMJ3qAGlyB
+        vEYZg4eZPpKhYd81fj4lnZDhNA79WVnz5REYPZQiI8J0PPcB0nAPH6FanEWND156woc76cvHpBOyEgyc
+        yyNGxMkd9hNB00MYhg7DCdQBwAs8Qe6kLx+TGkcigIbwmMIRtLD3k9S/3b3U8u6b6faKJahc8SJUvEik
+        ANd1KpSg5ndVos/a1qUFvZ4glEFZk4c1ArgOkI/J6gDJ6gB4b//YwHZE47vRb2O60Pnhneko/3/gH20Y
+        reUa7/X/NrqL5Dk2qJ1+d6AO4B7zdpWQXwfY278VnR3aiX78vAOd+aIjnZMPOTuLM+AaabiHPMjrOsDV
+        RzCMTtDiGJYhIJIO/LMtJQ/tSKcGt6PTn7en00M6+ILTcC95aAfJizIoa/LAEACeINThOkE+IDU4XsJQ
+        w9sigDGRw5FuZ75+nVISetMv43rS+S+70bkRL9DZYc8LcI20X77qKXmQ1zwGjh1AeDhFAGvd7rIwh8lq
+        bMCpByK9MqMx4zPGJV3OxRY1TxLFSV84H3BBPznzD6d+CXCiGNJwj/MgL8qgrMkDu4A47esZRjUGftHM
+        TnaHdJLRpQAIikOPSs/YSMOO3GOM3oxpDPzE3O8MMZzCDOE05rXmcpQsThL1HiLpPQQSkHucZ+zrzX3K
+        2gBnwMGPqPNNRiMGtqGdogDk1HbgvusUNlJja8/xF0oRfusx8O7daAZ+o/8CI42BuMemMORcQYXe+6pX
+        C8MJzCNfrZA0vje+d0u87KG8rABPfQxsx0XGNwzIBhkhqw4ZdlLn1qHjunIKNNYaJp0I2623Mjoy8Muh
+        qxl6brAHMEpISAj26PFiJgyDa924scAwoLmx43ECPffXbnzkQV6UQVlfXgLUgbpQ52XIYORNkw8yQ3a0
+        AW1Bm/DU0omsOvHXCa46shobcPJ0pGPcxosV7zHmM44yoGCLMmGQkNSQkNDLoaGh3BPF8A7GvoGiY4rT
+        TRUqU6076lL1WrebhjSMancCGN7J+JoPZcGj9p33UrlKValYbAlOd3YKznsFsoUY8qXeYPKwADLjt4MW
+        MT5itGBUZUAHdrJ3lHwfJSCghjbAyYuRR8ftXowpDD/jdgE2dkiKKJT/cloaYxcsWIgqVqpCYWHecwJw
+        /VCjpvR4s7bUoEkr+Rtf527zvmFYNe44OIF5tHxa4xt5UNbKC7zt9d1cuToVKuQ9K8ACSxtCMSw5OSzm
+        E9DBdEYfxlU5n/AnDL6Vu4fRnTGKsYWRZtxGL7MqitNsvR+KDqOyZctTvfsepY6de9I77/2bxkxYQBOm
+        LKOiRY3f6APCwyPo4ceb0SNPNGc8I2jUrI3FCXx7+LS3WlHC261t6V7jo6zyAU/wRh3KC3V/PXU5jZu4
+        iPp9MJg6d/kj3f9gfSpXrhKFhXsdxYIraKM6NtrukEfnE2MZ+PYBvz7uNJ/QTpcvCI9g8Z4+TsPAt/xJ
+        jDMMn8aZxpZQCfD/aUI5h08qXqIk3X5nXWrZqjO98dbH9MWIaTR99hpatPxbWpK4kxYu20ELln5D4ycv
+        YSMYP9asyqx5210ewz36ZAsxnN0JNG/BiDCBNQ3wGr+5Dw/wtuZF3eMnLaH5S7bTApYJskHGhDnraNio
+        BPrr3z6jVm270J133UdxJUtL27QOEzp0qFP4m09gH2INYxADb0LfxoDOQXkWCdT7mjMwttlmyIGN20Wj
+        i1HN+DrUuGkr+vNrfelfn0+gSdNX0nw2MBS6eMV3NG/xVpo5bwMrdq04ApAwZz3nS6TSpcsKH1aeh6c/
+        A9qdQHt9IMa3ltW6UDdkgMENudaKjJB1Lsu8iGVHG+CskxMSpW1oI9qKNqPtytOCtPOJtPMOnU9A96Bc
+        jwTqdfYfdkh33I6MLMhjZjWq37Axde/Zmz4ZMFJ60NxFW2nJSjb2yu+lN82av9FUKgxuYNqstTR15hrB
+        9NnrOM8GWrNxP306YAgbxDCitYc5GbJh09YyodM8WOdb1/q177iX82TkOMbLJXAc1L120wGRBfKqfJDV
+        KjvuoU1oG9qItqLNaDt0AF1AJ5Wr3MLzCeOQKRs88wm+tg6TefZDFFoZxiZdoqlQAozbZXzG7YE0auwc
+        msmKWLzCUAJ6xuwFm2nGXF9jA15jrxXlLVq+nVZv2E3bvz9C+w+doeOnfqGTZ3+ly0Q0ZNiXUqdhHGcn
+        wJBgdwA7vA5gjPnOxjf4fz50lNQNGSDL/sNn6BuWbc3GPdw+tGujTzumWdoGoM1oO3Qgzs86mbVgE43+
+        ah69+6F3PnFTuYpO8wntXHn2UzRamfy4E0OECg0No2bN29Gbb39CQ4bzuD3LO27j79xFW2jm3PU+igCm
+        cT7tOQifC5ZupcS1O2nLjh9oz4FTdPTHn+jUuYt07uffBGd/+i+dTv4PK/8inTj9C138nah3n/dFOQU4
+        PNudAEYFrMb0B3/5wVNDf68335c6UTdkgCyQSeU7nXxRZN578BRt/fYQJa3bRQuXbpO2aSRDm+16mMG6
+        mbNwi8xxvPOJtTR0ZAK99c4AeqZFe4KOWQZ1AOg+T36MyhoBPA9doqKipRHLknZLiPOO215YQznG8XmL
+        t9CKVd/Rxm0HaOfeE3ToWLL0KlUo/p45/x9xAKQbuCj/A1D+4ePJtHLtXnr1deO7fftwUPuOurbQn3ai
+        ZU1Lm98I+7jGGI66jpxIlrpVDsik8qlc1jYg/fDx87Rr34+0aftBWrH6e2k79DXV0gGsuvLMJ7jjLEva
+        JXmhY5YjvYdUuUKODlAkqqgsiQxPNxqkxsa4PWfhJlqauIPWbd5H3+46RgePnONedIENbPaen36Ta0Oh
+        amxDof4ARSMEJ7DC0Gv+0utd02jeyR1PRAX2dCsCyQ8HW5q4S+pCnVYHcIK9DXDks9xGcQpu549nLtAP
+        R8/Rd7uP0/ot+2kZ6wY6ss8noEvoFLqFjlmWfOoARYry+nwhe+oGEdgzbn/nHbehNDE2A8ZWJQZibH+A
+        Yjd/84PMyBF9nJzA+j/CqHXVgOtQnrP4y49rGB+8UQfq0qiUWXidAs4L2b1DB3jKfIJ15Z1PYFIMfW4U
+        3ULHLE/+dACsi1eu/oYnRGc5RJ6XBqNXi8dzGLQb2xrKswvU4ewExtgNQE6eSVPX7q9R8eJxch/Adbce
+        r4tjII83v+EkvsY/KHU5yZAVpDd0AHAS6PLA4XOUuGaH7nvkTwcoFhNDBw+fpJ9+TbE0MPjGdgL4+3MC
+        K15/432efW+iwoW927e4RlqvNz/wyQvYez7qyI22WJ0CgE6hW+iY5cqnDlAshmftx9iDf/cRPrfg6wRJ
+        Ml737vMR9/CSgl5vfsiTr7281JqvY6kA10jDPeTR/L37fCg8wCu3jO8E6BI6hW6hY+g63zrA3oPHWVF5
+        4wCA1QkmJ6ySJdXUmasEWHNjMroscRvFxsZ6HADXy5K2yT3k0fwoCx55aXwAuoROodtr3gFQLrvA7Brj
+        6GZebsGA2EgC0JO3f3/UCKWGIgW4PnjkpNxDHs2PsliygRd4OtWVWTi1OSOg3HXjACgbDJxl/HwxhbZw
+        7506c7UAxkTangMeRXocAGm4B6cxlmCrpecjDbyc6sgKnNqcEa4bB0CZfT+coL1sDPDJDmDQvQdPSO/d
+        tO2AbDThGsYEf7sDIA3jLPIgr+YHD4NXNsE80Las6uWadgBtIBRUvkJFnpRFUUxMrDQ2K0BZ8ACvfWzA
+        8xcuyfLKQZFeB7DIjaUXyuSIPMwzq/q55h3AahiTZ5agZe3yONUTaL6ckMdJF05wkMd1gPTgT+FO9QSa
+        LyfkcdKFExzkuXodQBWs0DSU8YTcIkWkodHRxbIElAUPe8jVeqyGBexy55Y8/vRhB9Jtcl+9DoB7Vljv
+        ocye/cdESQePnGacyiJOCw/wssrhoEhHB8gteQCrLgDrPYWD3FenAyANipBZvsOsGBst/72UytcXaP+h
+        k6I4Z4Wmh9NSFjzAy7p546DIDBwg5+VJTx/WfFe1A2gD0ECEwaiiRQXWkIiXKy78l2jMuElUuvSNHDqj
+        ubHOITU9GGWihQd4gSc2cfwo0q8DoExOyYO2ZqQPJ/1d9Q7gT/F4Ro5l2tEfz1OlSjfLPTyN03yZhZYF
+        L/DEI1fIkJEcKjeAMjklj/HE77cM5bgmHQBrYs4rwDXSoAxRCIfB2Njics94HCt8MwWUUYWDF3haDWtT
+        pMAutydfDsnjaa8ffagc16QDOCneVyHGfVU2vr7BS5EBwfxqR8uCl1WejORwypcT8ljbm54c16UDWO9D
+        gfUeeYIeatiUHmzQmNHEDxpLHuRVpVv5qzwZyZFRvmDJ4zpAgApBL4Ii6zd+jh57qmW6QB7kRRk7f5Un
+        IzkyyhcseVwHCFAhUB56ExSqH2s4AfeQB3lz2gGCIY/rAAEqxFB4E1Gmk6KtMBTeJBccIPvyuA4QoEJc
+        B3AdwHUA1wGMMddJyVYYCs+9OYCTDFakJ4/rAAEqBIcxYCYNhWY06cJf5LUe4GCXJyM5MsoXLHlcB0hH
+        IbrxAuAjjnqPPC7Hs6BHOSkdabj3+DNtZd2NMlo+mBtBQLDkcR3A1mCPQixbryZPCo+IpJurxct42qhp
+        G4/iVdFIe7BhE6pcvRZFcF5r2WBuBQdTHtcBbA2GMuwPg3C+gCoOsCpeP9/GNdJU0QDKoCyug/kwKJjy
+        XNcPg/w1+MTpn+VR6djxU/TzJ1EeQqg+TAHCIyKoyi21BbjWdORBXjUSeIBXdh8H54Q8aGugcviR+9pz
+        AOSB0nHwwu79R6lj5xf5vvGkzEnxCruio6NjqH3H7sIDvNT4mZFD8+eUPJmVwyH/tekAqvRT5/5DK9fs
+        pfGTllL7Tj04n13xBqyKRp627bvRuImLpSx4WI2fWTkUOSFPZuVwyH/tOgDGx2Mnf6aZ89bLmTlLE3fS
+        hMms+I6sePPZOepTRUczDygaBy7hQ0585Yuy4AFeKkNm5VDkhDyZlcMh/7XtAHhlCt/mTZmxmnD8Gg5T
+        EsVPWUbtOJzizD2gjUfRO2nOws2SF2VQFjyC5QDBliezcjjkv3YdAMCXOft+OE3LV33HSjSOmcGBU1Aq
+        TtSaMiNJgGtRtHnGDvIuT/qWeZ4WHspPkVk5FMGWJ7NyOOTPvw5gnA/wm2eyA+AaaZbv2z0NdsoP4LgU
+        9Jg9B07SMlYizslBb5o2azWHVOMIGlxPmbFK7iEP8qIMylp5KbIihyKY8mRWDof8+dQBeKlz8PAp+vni
+        FREYXgvgGmm4p0sqwF9+o4zxhS9Oxjh/4TIdPJJMSet2SzhVheMaaThsCnmQF2VQ1srLyzPzcnjLBk+e
+        zMrhkD9/OgBeg968bacICm9FyAJwjTTcQx7OK/CX3wp8mQscOHyS9h/6kTZt20sJc1ZRwuxVco003NN8
+        TjwU2ZFDEQx5MiuHQ/584wA+B0VCKAgIL0Wo8gGn4Z4puCDd/DZEFzPesS9eojjFxMYKcO2951wuDbIp
+        hyLb8mRWDt/8+eqgSD0qNs3ZwC5yDPnmqFgcVLyPAWHkrGB4aHow83rglCc3cLXKYebTc5mh+zw5LBqE
+        nzIBtWb8yoBAbhTIeaiOoXPoHqS2yCTdcMP/AHc3AEjUNa/1AAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>36</value>
+    <value>27</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
