--- a/Alquiler_motos/Alquiler_motos/garaje.resx
+++ b/Alquiler_motos/Alquiler_motos/garaje.resx
@@ -121,7 +121,7 @@
   <data name="Label12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAFmlJREFUeF7tXQd4VNW2lhpCSQESOlIfSJEamii9g1IECQk9UqQEAoEAadRQVJpS
+        vwAADr8BOAVTJAAAFmlJREFUeF7tXQd4VNW2lhpCSQESOlIfSJEamii9g1IECQk9UqQEAoEAadRQVJpS
         BPT6nt77rq98Vu5Vr/dxn773Pe+1gIKK0gwdEkqooWS99a9z9nBmMhMymUkZZ6/v+789M+fMLmv/e++1
         9tl7n0e0aNGiRYsWLVq0aNGiRYsWLVq0aNGiRYuWkiWlvAAtPiilGWWMjx4JCFDWDLX4iKDyVYWVZ4Qw
         Qi3hw6DuC2YoEiE+xKulhIuqpAaMnYyjjEsFwGVGBuMQYxUDZIBoEpQAQSWgW1YtXUG11icYqERi5JQq
@@ -252,6 +252,9 @@
   </data>
   <metadata name="GarajeBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>232, 17</value>
+  </metadata>
+  <metadata name="Alquiler_motosDataSet_garaje.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <metadata name="Alquiler_motosDataSet_garaje.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -413,6 +416,6 @@
     <value>397, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>30</value>
+    <value>35</value>
   </metadata>
 </root>
